<resources>
    <string name="app_name">SpaceVendas</string>
    <string name="login">Entrar</string>
    <string name="label_user">Usuário</string>
    <string name="label_pass">Senha</string>
    <string name="label_host">Host</string>
    <string name="label_port">Porta</string>
    <string name="save">Salvar</string>
    <string name="http">Conexão Segura (Https)</string>
    <string name="settings">Configuração</string>
    <string name="message_invalid_config">Preencha o Host e a Porta</string>
    <string name="data_sucess_massege">Dados salvos</string>
    <string name="search">Pesquisar</string>
    <string name="nat_oper">Natureza de Operação</string>
    <string name="observacao">Observação</string>
    <string name="forma_pagto">Forma de Pagamento</string>
    <string name="cond_pagto">Condição de Pagamento</string>
    <string name="vendedor">Vendedor</string>
    <string name="save_pedido">SALVAR PEDIDO</string>
    <string name="dados_pedido">Dados do Pedido</string>
    <string name="items_pedido">Itens do Pedido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancelar Pedido</string>
    <string name="client">Cliente</string>
    <string name="product">Produtos</string>
    <string name="help">Ajuda</string>
    <string name="support">Suporte</string>
    <string name="version">Versões</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">Inicio</string>
    <string name="pedidos">Pedidos</string>
</resources>