<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DadosPedidoFragment">

    <LinearLayout
        android:id="@+id/linear_dados_pedido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/label_dados_pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/spinner_natoper"
            android:text="@string/nat_oper" />

        <Spinner
            android:id="@+id/spinner_natoper"
            style="@style/spinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edit_text" />


        <TextView
            style="@style/label_dados_pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/spinner_forma_pagto"
            android:text="@string/forma_pagto" />

        <Spinner
            android:id="@+id/spinner_forma_pagto"
            style="@style/spinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edit_text" />


        <TextView
            style="@style/label_dados_pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/spinner_cond_pagto"
            android:text="@string/cond_pagto" />

        <Spinner
            android:id="@+id/spinner_cond_pagto"
            style="@style/spinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edit_text" />


        <TextView
            style="@style/label_dados_pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/spinner_vendedor"
            android:text="@string/vendedor" />

        <Spinner
            android:id="@+id/spinner_vendedor"
            style="@style/spinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edit_text" />

        <TextView
            style="@style/label_dados_pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/input_obs"
            android:text="@string/observacao" />

        <EditText
            android:id="@+id/input_obs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text"
            android:elevation="3dp"
            android:hint="@string/observacao"
            android:padding="16dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_save_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="96dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_primary"
        android:text="@string/save_pedido"
        android:layout_gravity="bottom"/>

    <ProgressBar
        android:id="@+id/progress_dados_pedido_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</FrameLayout>