<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginBottom="100dp"
            android:src="@drawable/logospace" />

        <EditText
            style="@style/edit_text"
            android:id="@+id/login_user"
            android:hint="@string/label_user"
            />

        <EditText
            style="@style/edit_text"
            android:id="@+id/login_pass"
            android:hint="@string/label_pass"
            android:inputType="textPassword"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_primary"
            android:text="@string/login"
            android:textColor="@color/white"/>

    </LinearLayout>


</ScrollView>